[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alnmeshpy"
version = "0.0.4"
authors = [
  { name="Chad Bohannan", email="chadbohannan@biglittleidea.org" },
]
description = "An implementation of the Application Layer Network (ALN)."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "aiofiles>=24.1.0",
  "bleak>=0.22.3"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
GitHub = "https://github.com/chadbohannan/application-layer-network"
Issues = "https://github.com/chadbohannan/application-layer-network/issues"
Homepage = "https://biglittleidea.org/article/5706803308396544"

